--- a/.github/workflows/op-lean-master.yml
+++ b/.github/workflows/op-lean-master.yml
@@ -20,8 +20,10 @@ on:
         default: 'false'
         
 # 定时触发开始编译(把下面两个#去掉开启,时间设置请看定时编译说明)
-  schedule:
-   - cron: 0 6 15 * *        
+  #schedule:
+   #- cron: 0 6 15 * *   
+  watch:
+    types: [started]
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
