--- a/Lede/.config
+++ b/Lede/.config
@@ -31,22 +31,24 @@ CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-CONFIG_PACKAGE_luci-app-serverchan=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-# CONFIG_PACKAGE_luci-app-unblockmusic is not set
+CONFIG_PACKAGE_luci-app-serverchan=n
+CONFIG_PACKAGE_luci-app-smartdns=n
+CONFIG_PACKAGE_luci-app-ttyd=n
+CONFIG_PACKAGE_luci-app-unblockmusic=y
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
-CONFIG_PACKAGE_luci-app-watchcat=y
-CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-watchcat=n
+CONFIG_PACKAGE_luci-app-webadmin=n
 # CONFIG_PACKAGE_luci-app-wol is not set
-CONFIG_PACKAGE_luci-compat=y
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
-CONFIG_PACKAGE_node=y
-CONFIG_PACKAGE_smartdns=y
-CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_luci-compat=n
+CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=n
+CONFIG_PACKAGE_node=n
+CONFIG_PACKAGE_smartdns=n
+CONFIG_PACKAGE_ttyd=n
 # CONFIG_PACKAGE_vsftpd-alt is not set
-CONFIG_PACKAGE_watchcat=y
+CONFIG_PACKAGE_watchcat=n
 # CONFIG_PACKAGE_wol is not set
+CONFIG_PACKAGE_luci-app-vssr=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
