--- a/Lede/.config
+++ b/Lede/.config
@@ -8,7 +8,7 @@ CONFIG_LIBCURL_HTTP=y
 CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
-CONFIG_NODEJS_12=y
+CONFIG_NODEJS_12=n
 CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_curl=y
 # CONFIG_PACKAGE_etherwake is not set
