--- a/.github/workflows/op-lean-master.yml
+++ b/.github/workflows/op-lean-master.yml
@@ -44,7 +44,12 @@ jobs:
   build:
     runs-on: Ubuntu-20.04
     name: 编译 lede-openwrt-rm-ac2100
-    
+    env:
+      build_variant: ${{ matrix.build_variant }}
+      targets: ${{ matrix.targets }}
+    strategy:
+      matrix:
+        node-version: [16]
     steps:
     - name: Checkout
       uses: actions/checkout@main
@@ -195,13 +200,17 @@ jobs:
     - name: Delete workflow runs
       uses: wooxi/delete-workflow-runs@main
       with:
+        node-version: ${{ matrix.node-version }} 
         retain_days: 1
         keep_minimum_runs: 10
+        
 
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.1.0
+       
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
+        node-version: ${{ matrix.node-version }} 
         keep_latest: 12
         delete_tags: true
       env:
