--- a/.github/workflows/op-lean-master.yml
+++ b/.github/workflows/op-lean-master.yml
@@ -26,7 +26,7 @@ on:
     types: [started]
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/wooxi/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: Lede/.config
