--- a/Lede/.config
+++ b/Lede/.config
@@ -33,7 +33,7 @@ CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
 CONFIG_PACKAGE_luci-app-serverchan=n
 CONFIG_PACKAGE_luci-app-smartdns=n
-CONFIG_PACKAGE_luci-app-ttyd=n
+CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 CONFIG_PACKAGE_luci-app-watchcat=n
@@ -46,9 +46,10 @@ CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=n
 CONFIG_PACKAGE_node=n
 CONFIG_PACKAGE_smartdns=n
-CONFIG_PACKAGE_ttyd=n
+CONFIG_PACKAGE_ttyd=y
 # CONFIG_PACKAGE_vsftpd-alt is not set
 CONFIG_PACKAGE_watchcat=n
 # CONFIG_PACKAGE_wol is not set
-CONFIG_PACKAGE_luci-app-vssr=y
+CONFIG_PACKAGE_luci-app-vssr=n
 CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_adguardhome=y
