--- a/.github/workflows/op-lean-master.yml
+++ b/.github/workflows/op-lean-master.yml
@@ -26,7 +26,7 @@ on:
     types: [started]
 
 env:
-  src_git: https://github.com/wooxi/padavan-4.4.git
+   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: Lede/.config
